@startuml
'https://plantuml.com/class-diagram

package cl.ucn.disc.pa.taller3 {
 package cl.ucn.disc.pa.taller3 {
     package vista {
         class VistaConsola {
             - sistema: SistemaOfertas
             + VistaConsola(sistema: SistemaOfertas)
             + iniciar(): void
             + lecturaEnteros(frase: String): int
         }
     }

     package servicios {
         interface SistemaOfertas {
             + ingresarOferta(): void
             + buscarOferta(): void
             + verOfertas(): void
             + editarOferta(): void
             + eliminarOferta(): void
             + verPerfil(): void
             + editarPerfil(): void
             + cerrarSesion(): void
         }

         class SistemaOfertasUCN {
             - contenedorOfertas: ContenedorOfertas
             - usuarioActual: Usuario
             - usuarios: Usuario[]
             - archivoOfertas: String
             - SistemaOfertasUCN()
             + registrarUsuario(nombre: String, rut: String, correo: String, contrasenia: String): boolean
             + iniciarSesion(rut: String, contrasenia: String): boolean
             + ingresarOferta(): void
             + buscarOferta(): void
             + verOfertas(): void
             + editarOferta(): void
             + eliminarOferta(): void
             + verPerfil(): void
             + editarPerfil(): void
             + cerrarSesion(): void
             + validarRut(rut: String): boolean
             + validarNombreUsuario(nombre: String): boolean
             + validarCorreo(correo: String): boolean
             + validarContrasenia(contrasenia: String): boolean
             + validarTitulo(titulo: String): boolean
             + validarDescripcion(descripcion: String): boolean
             + validarDuracion(duracion: int): boolean
             + validarPromedio(promedio: double): boolean
             + validarTipoAyudantia(tipo: String): boolean
             + validarAsignatura(asignatura: String): boolean
             + validarHorasSemanales(horas: int): boolean
             + validarTipoProyecto(tipo: String): boolean
             + validarDuracionMeses(meses: int): boolean
             + validarCarreras(carreras: String): boolean
             + validarCantidadEstudiantes(cantidad: int): boolean
             + leerArchivoOfertas(): void
             + guardarUsuarios(usuarios: Usuario[], rutaArchivo: String): boolean
             + leerUsuarios(rutaArchivo: String): Usuario[]
             + guardarOfertas(ofertas: Oferta[], rutaArchivo: String): boolean
             + getUsuarioActual(): Usuario
         }
     }
    package dominio {
        class Usuario {
            - nombre: String
            - rut: String
            - correo: String
            - contrasenia: String
            + Usuario(nombre: String, rut: String, correo: String, contrasenia: String)
            + gets()
            + sets()
            + verificarContrasenia(contrasenia: String): boolean
            + toString(): String
        }

        abstract class Oferta {
            - id: String
            - titulo: String
            - descripcion: String
            - nombreUnidad: String
            - duracionDias: int
            - fechaPublicacion: LocalDate
            - fechaCierre: LocalDate
            + Oferta(id: String, titulo: String, descripcion: String, nombreUnidad: String, duracionDias: int)
            + gets()
            + sets()
            + calcularFechas(): void
            + toString(): String
        }

        abstract class ActividadEmpresa extends Oferta {
            - fechaInicio: LocalDate
            - nombreEmpresa: String
            - nombreGuia: String
            + ActividadEmpresa(id: String, titulo: String, descripcion: String, nombreUnidad: String, duracionDias: int,
                             fechaInicio: LocalDate, nombreEmpresa: String, nombreGuia: String)
            + gets()
            + sets()
        }

        class Ayudantia extends Oferta {
            - nombreAsignatura: String
            - rolAyudante: String
            - horasSemanales: int
            - promedioMinimo: double
            - tipoAyudantia: String
            + Ayudantia(id: String, titulo: String, descripcion: String, nombreUnidad: String, duracionDias: int,
                      nombreAsignatura: String, rolAyudante: String, horasSemanales: int, promedioMinimo: double, tipoAyudantia: String)
            + gets()
            + sets()
            + toString(): String
        }

        class Capstone extends ActividadEmpresa {
            - tipoProyecto: String
            - duracionMeses: int
            - carrerasNecesarias: String[]
            - cantidadMinEstudiantes: int
            + Capstone(id: String, titulo: String, descripcion: String, nombreUnidad: String, duracionDias: int,
                    fechaInicio: LocalDate, nombreEmpresa: String, nombreGuia: String, tipoProyecto: String,
                    duracionMeses: int, carrerasNecesarias: String[], cantidadMinEstudiantes: int)
            + gets()
            + sets()
            + toString(): String
        }

        class Practica extends ActividadEmpresa {
            - poseeRemuneracion: boolean
            + Practica(id: String, titulo: String, descripcion: String, nombreUnidad: String, duracionDias: int,
                    fechaInicio: LocalDate, nombreEmpresa: String, nombreGuia: String, poseeRemuneracion: boolean)
            + gets()
            + sets()
            + toString(): String
        }

        class ContenedorOfertas {
            - ofertas: Oferta[]
            - cantidadMaxima: int
            - cantidadActual: int
            + ContenedorOfertas(cantidadMaxima: int)
            + getCantidadActual(): int
            + agregar(nueva: Oferta): void
            + buscarPorId(id: String): int
            + buscarPorTitulo(titulo: String): int
            + obtener(posicion: int): Oferta
            + eliminar(id: String): boolean
        }
    }
}


Usuario "1" -- "*" Oferta : gestiona >
VistaConsola "1" *-- "1" SistemaOfertas : utiliza
SistemaOfertasUCN ..|> SistemaOfertas
SistemaOfertasUCN "1" *-- "1" ContenedorOfertas
ContenedorOfertas o-- Oferta : contiene

@enduml